--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,19 @@
 * {
     font-family: 'Roboto', sans-serif;
 }
+
 body {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 h1 {
-    font-size: 48px;
     font-weight: bolder;
+    font-size: 48px;
     color: #f9faf8;
 }
 
@@ -105,4 +110,73 @@ li {
     max-width: 150px;
     text-align: center;
     margin-top: 5px;
+}
+
+.lower-middle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
+    padding: 100px;
+}
+
+.lower-middle p {
+    flex-wrap: wrap;
+    width: 800px;
+    font-size: 36px;
+    font-style: italic;
+}
+
+.lower-middle span {
+    font-size: 24px;
+    margin-left: 500px;
+    margin-top: -40px;
+}
+
+.bottom-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.blue {
+    background-color: #3882f6;
+    width: 800px;
+    height: 100px;
+    margin: 80px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+}
+
+.action {
+    font-size: 18px;
+    color: #F9FAF8;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+}
+
+.description {
+    font-size: 10px;
+    color: #F9FAF8;
+}
+
+.bottom-button {
+    border-color: #F9FAF8;
+    border-width: 2px;
+    border-style: solid;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1f2937;
+    color: #E5E7EB;
+    font-size: 10px;
+    height: 50px;
 }
